[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kyber-py"
version = "1.0.0"
requires-python = ">=3.9"
description = "A pure python implementation of ML-KEM (FIPS 203)"
readme = "README.md"
classifiers = [
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/GiacomoPope/kyber-py"
Issues = "https://github.com/GiacomoPope/kyber-py/issues"

[tool.black]
line-length = 79

[tool.ruff.lint]
# Avoid enforcing Ambiguous variable name (`E741`)
ignore = ["E741"]
